--- a/crud/pages/coach/coach.html
+++ b/crud/pages/coach/coach.html
@@ -196,6 +196,26 @@
         <!-- /.modal-dialog -->
     </div>
 
+    <div class="modal fade" id="detail-coach">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title" id="detail-title">Chi Tiết</h4>
+                    <button aria-label="Close" class="close" data-dismiss="modal" type="button" >
+                        <span aria-hidden="true" ><h1>X</h1></span>
+                    </button>
+                </div>
+                <div class="modal-body" >
+                    <div id="table-detail-coach">
+
+                    </div>
+                </div>
+            </div>
+            <!-- /.modal-content -->
+        </div>
+        <!-- /.modal-dialog -->
+    </div>
+
     <!-- Main content -->
 </div>
 <script crossorigin="anonymous"
