--- a/crud/pages/coach/coach-detail.html
+++ b/crud/pages/coach/coach-detail.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Huấn luyện viên</title>
+    <title>Quản lý HLV</title>
     <!-- Google Font: Source Sans Pro -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback"
           rel="stylesheet">
@@ -42,7 +42,7 @@
     <!-- Main Sidebar Container -->
     <aside class="main-sidebar sidebar-dark-primary elevation-4">
         <!-- Brand Logo -->
-        <a class="brand-link" href="#">
+        <a class="brand-link" href="coach.html">
             <img alt="AdminLTE Logo" class="brand-image img-circle elevation-3" src="../../dist/img/AdminLTELogo.png"
                  style="opacity: .8">
             <span class="brand-text font-weight-light">Trang chủ</span>
@@ -60,7 +60,6 @@
             </div>
 
 
-
             <!-- Sidebar Menu -->
             <nav class="mt-2">
                 <ul class="nav nav-pills nav-sidebar flex-column" data-accordion="false" data-widget="treeview"
@@ -70,7 +69,7 @@
                     <li class="nav-item menu-open">
                         <ul class="nav nav-treeview">
                             <li class="nav-item">
-                                <a class="nav-link" href="coach.html">
+                                <a class="nav-link" href="coach-detail.html">
                                     <i class="far fa-circle nav-icon"></i>
                                     <p>Thông tin cá nhân</p>
                                 </a>
@@ -92,23 +91,46 @@
     </aside>
 
     <!-- Content Wrapper. Contains page content -->
-    <div class="content-wrapper">
-        <!-- Content Header (Page header) -->
-        <section class="content-header">
-            <div class="container-fluid">
-                <div class="row mb-2">
-                    <div>
-                        <h1 style="text-align: center; color: blue">Thông tin cá nhân</h1>
+
+    <div class="modal fade" id="create-category">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title" id="create-category-title"></h4>
+                    <button aria-label="Close" class="close" data-dismiss="modal" type="button">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="form-group">
+                        <label for="name">Tên HLV:</label>
+                        <input class="form-control" id="name" placeholder="Nhập tên HLV" type="text">
+                    </div>
+                    <div class="form-group">
+                        <label for="DoB">Ngày sinh:</label>
+                        <input class="form-control" id="DoB" placeholder="Nhập ngày sinh" type="text">
+                    </div>
+                    <div class="form-group">
+                        <label for="nationality">Quốc tịch:</label>
+                        <select class="form-control" id="nationality"></select>
+                    </div>
+                    <div class="form-group">
+                        <label for="base_salary">Lương CB:</label>
+                        <input class="form-control" id="base_salary" placeholder="Nhập lương CB" type="text">
+                    </div>
+                    <div class="form-group" id="cv_coach">
+                    </div>
+                    <div class="form-group">
+                        <label for="cv">CV</label>
+                        <input class="form-control" id="cv" type="file">
                     </div>
                 </div>
-            </div><!-- /.container-fluid -->
-        </section>
-
-        <!-- Main content -->
-    <div id="detail-info">
-
-    </div>
-        <!-- /.content -->
+                <div class="modal-footer justify-content-between" id="create-category-footer">
+                </div>
+            </div>
+            <!-- /.modal-content -->
+        </div>
+        <!-- /.modal-dialog -->
     </div>
 
 
@@ -155,6 +177,7 @@
 <script src="../../dist/js/demo.js"></script>
 <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
 <script src="../../dist/js/pages/dashboard.js"></script>
-
+<script src="../../notification.js"></script>
+<script src="coach.js"></script>
 </body>
 </html>
