--- a/crud/pages/coach/player-list.html
+++ b/crud/pages/coach/player-list.html
@@ -35,15 +35,15 @@
 <body class="hold-transition sidebar-mini layout-fixed">
 
 <div class="wrapper">
-    <!-- /.navbar -->
+
 
     <!-- Main Sidebar Container -->
     <aside class="main-sidebar sidebar-dark-primary elevation-4">
         <!-- Brand Logo -->
-        <a class="brand-link" href="index3.html">
+        <a class="brand-link" href="coach.html">
             <img alt="AdminLTE Logo" class="brand-image img-circle elevation-3" src="../../dist/img/AdminLTELogo.png"
                  style="opacity: .8">
-            <span class="brand-text font-weight-light">AdminLTE 3</span>
+            <span class="brand-text font-weight-light">Trang chủ</span>
         </a>
 
         <!-- Sidebar -->
@@ -79,23 +79,18 @@
                     <li class="nav-item menu-open">
                         <ul class="nav nav-treeview">
                             <li class="nav-item">
-                                <a class="nav-link" href="player.html">
+                                <a class="nav-link" href="coach-detail.html">
+                                    <i class="far fa-circle nav-icon"></i>
+                                    <p>Thông tin cá nhân</p>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="player-list.html">
                                     <i class="far fa-circle nav-icon"></i>
                                     <p>Quản lý cầu thủ</p>
                                 </a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="../coach/coach.html">
-                                    <i class="far fa-circle nav-icon"></i>
-                                    <p>Quản lý HLV</p>
-                                </a>
-                            </li>
-<!--                            <li class="nav-item">-->
-<!--                                <a class="nav-link" href="../bill/bill.html">-->
-<!--                                    <i class="far fa-circle nav-icon"></i>-->
-<!--                                    <p>Quản lý Bill</p>-->
-<!--                                </a>-->
-<!--                            </li>-->
+
                         </ul>
                     </li>
                 </ul>
