--- a/crud/pages/admin/coach.html
+++ b/crud/pages/admin/coach.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Huấn luyện viên</title>
+    <title>Quản lý HLV</title>
     <!-- Google Font: Source Sans Pro -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback"
           rel="stylesheet">
@@ -42,7 +42,7 @@
     <!-- Main Sidebar Container -->
     <aside class="main-sidebar sidebar-dark-primary elevation-4">
         <!-- Brand Logo -->
-        <a class="brand-link" href="#">
+        <a class="brand-link" href="index.html">
             <img alt="AdminLTE Logo" class="brand-image img-circle elevation-3" src="../../dist/img/AdminLTELogo.png"
                  style="opacity: .8">
             <span class="brand-text font-weight-light">Trang chủ</span>
@@ -59,7 +59,18 @@
                 </div>
             </div>
 
-
+            <!-- SidebarSearch Form -->
+<!--            <div class="form-inline">-->
+<!--                <div class="input-group" >-->
+<!--                    <input aria-label="Search" id="q" class="form-control form-control-sidebar" placeholder="Search"-->
+<!--                           type="search">-->
+<!--                    <div class="input-group-append">-->
+<!--                        <button class="btn btn-sidebar" onclick="findCategoryByName()" aria-label="Close" class="close" data-dismiss="modal">-->
+<!--                            <i class="fas fa-search fa-fw"></i>-->
+<!--                        </button>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
 
             <!-- Sidebar Menu -->
             <nav class="mt-2">
@@ -70,18 +81,17 @@
                     <li class="nav-item menu-open">
                         <ul class="nav nav-treeview">
                             <li class="nav-item">
-                                <a class="nav-link" href="coach.html">
-                                    <i class="far fa-circle nav-icon"></i>
-                                    <p>Thông tin cá nhân</p>
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="player-list.html">
+                                <a class="nav-link" href="player.html">
                                     <i class="far fa-circle nav-icon"></i>
                                     <p>Quản lý cầu thủ</p>
                                 </a>
                             </li>
-
+                            <li class="nav-item">
+                                <a class="nav-link" href="coach.html">
+                                    <i class="far fa-circle nav-icon"></i>
+                                    <p>Quản lý HLV</p>
+                                </a>
+                            </li>
                         </ul>
                     </li>
                 </ul>
@@ -98,20 +108,113 @@
             <div class="container-fluid">
                 <div class="row mb-2">
                     <div>
-                        <h1 style="text-align: center; color: blue">Thông tin cá nhân</h1>
+                        <h1 style="text-align: center; color: blue">Danh sách HLV</h1>
                     </div>
                 </div>
             </div><!-- /.container-fluid -->
         </section>
 
         <!-- Main content -->
-    <div id="detail-info">
+        <section class="content">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="card">
+                            <div class="card-header row" id="add-new-event">
+                                <h3 class="card-title col-11">Quản lý HLV</h3>
+                                <button class="btn btn-primary col-1" data-target="#create-category" data-toggle="modal"
+                                        type="button" onclick="showCreateCoach()" style="float: right">
+                                    Thêm mới
+                                </button>
+                            </div>
+                            <div class="card-body">
+                                <table class="table table-bordered table-hover" id="example2">
+                                    <thead id="category-head">
+                                    <tr style="text-align: center">
+                                        <th>#</th>
+                                        <th>Tên HLV</th>
+                                        <th>Ngày sinh</th>
+                                        <th>Quốc tịch</th>
+                                        <th colspan="2" >Thao tác</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody id="category-list-content">
+                                    </tbody>
+                                </table>
+                            </div>
+                            <!-- /.card-body -->
+                        </div>
+                        <!-- /.card -->
 
-    </div>
+                    </div>
+                    <!-- /.col -->
+                </div>
+                <!-- /.row -->
+            </div>
+            <!-- /.container-fluid -->
+        </section>
         <!-- /.content -->
     </div>
+    <div class="modal fade" id="create-category">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title" id="create-category-title"></h4>
+                    <button aria-label="Close" class="close" data-dismiss="modal" type="button">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="form-group">
+                        <label for="name">Tên HLV:</label>
+                        <input class="form-control" id="name" placeholder="Nhập tên HLV" type="text">
+                    </div>
+                    <div class="form-group">
+                        <label for="DoB">Ngày sinh:</label>
+                        <input class="form-control" id="DoB" placeholder="Nhập ngày sinh" type="text">
+                    </div>
+                    <div class="form-group">
+                        <label for="nationality">Quốc tịch:</label>
+                        <select class="form-control" id="nationality"></select>
+                    </div>
+                    <div class="form-group">
+                        <label for="base_salary">Lương CB:</label>
+                        <input class="form-control" id="base_salary" placeholder="Nhập lương CB" type="text">
+                    </div>
+                    <div class="form-group" id="cv_coach">
+                    </div>
+                    <div class="form-group">
+                        <label for="cv">CV</label>
+                        <input class="form-control" id="cv" type="file">
+                    </div>
+                </div>
+                <div class="modal-footer justify-content-between" id="create-category-footer">
+                </div>
+            </div>
+            <!-- /.modal-content -->
+        </div>
+        <!-- /.modal-dialog -->
+    </div>
 
+    <div class="modal fade" id="detail-coach">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title" id="detail-title">Chi Tiết</h4>
+                    <button aria-label="Close" class="close" data-dismiss="modal" type="button" >
+                        <span aria-hidden="true" ><h1>X</h1></span>
+                    </button>
+                </div>
+                <div class="modal-body" >
+                    <div id="table-detail-coach">
 
+                    </div>
+                </div>
+            </div>
+            <!-- /.modal-content -->
+        </div>
+        <!-- /.modal-dialog -->
+    </div>
 
     <!-- Main content -->
 </div>
@@ -155,6 +258,7 @@
 <script src="../../dist/js/demo.js"></script>
 <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
 <script src="../../dist/js/pages/dashboard.js"></script>
-
+<script src="../../notification.js"></script>
+<script src="coach.js"></script>
 </body>
 </html>
